[package]
name = "corto"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.47.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace"] }
sea-orm = { version = "1.1.14", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros", "with-chrono"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
config = { version = "0.15.13", features = ["toml"] }
chrono = "0.4.41"
log = "0.4.27"
rand = "0.8.5"
url = "2.5.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
